--- a/Dockerfile.python
+++ b/Dockerfile.python
@@ -1,5 +1,14 @@
 FROM python:3.12-slim
+
 WORKDIR /app
+
 COPY . .
+
+# Устанавливаем netcat
+RUN apt-get update && apt-get install -y netcat-openbsd && rm -rf /var/lib/apt/lists/*
+
 RUN pip install --no-cache-dir -r requirements.txt
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "5000"]
+
+RUN chmod +x ./start.sh
+
+CMD ["./start.sh"]
